# marvin

./: .gitignore  CHANGELOG  CMakeLists.txt  CNAME  LICENSE  README.md  _config.yml  about.html  about.md  community.html  compile.sh  documenting.html  index.html  index.md  marvin.cu  marvin.hpp  modeling.md  params.json  teaching.html
_includes/: analytics.html  footer.html  fork.html  head.html  hero.html  nav.html
_layouts/: main.html
assets/css/: stylesheet.css
data/imagenet/: download.sh
data/places/: download.sh
examples/3dshapenets/: 3dshapenets.json  README.md  prepare_data.sh
examples/FCN_VGG/: FCN16s.json  FCN32s.json  FCN8s.json  prepare_data.m  readme.md  test.sh  train.sh  visualize_result.m
examples/ImageData/: alexnet.json
examples/char-lstm/: char-lstm-gen2.json  char-lstm-train2seq.json  gen2.sh  prepare_sequence.m  train2.sh
examples/classification/: ImageNetclass.mat  ImageNetclass.txt  PLACE205_label.mat  README.md  demo.m
examples/imagenet/: alexnet.json  demo.m
examples/mnist/: demo.sh  demo_vis_filter.m  lenet.json  lenet_adadelta_solver.json  lenet_deconv_autoencoder.json  lenet_group_lrn_dropout_test_loss.json  prepare_mnist.m  siamese.json
examples/webcam/: alexnet_imagenet_webcam.json  compile.sh  demo.sh  webcam.cu
models/alexnet_imagenet/: alexnet_imagenet.json  download_weights.sh
models/alexnet_places/: alexnet_places.json  download_weights.sh
models/googlenet_imagenet/: download_weights.sh  googlenet_imagenet.json
models/googlenet_places/: download_weights.sh  googlenet_places.json
models/vgg_imagenet/: download_vgg16_weights.sh  download_vgg19_weights.sh  vgg16_imagenet.json  vgg19_imagenet.json
python/marvin/: io.py
scripts/: install
tools/converter_caffe/: caffemodel2marvin.cpp
tools/tensorIO_matlab/: float2half.cpp  float2half.mexa64  float2half.mexmaci64  half2float.cpp  half2float.mexa64  half2float.mexmaci64  readTensors.m  writeTensors.m
tools/tensorIO_python/marvin/: io.py
tools/viewer_matlab/: loadjson.m  plotNet.m
